2005-04-22 Thomas Houssin <Thomas.Houssin@sourcemage.org>
	* PRE_BUILD: added security patch
		see http://www.kde.org/info/security/advisory-20050421-1.txt

2005-03-30 Andrew Stitt <astitt@sourcemage.org>
	* BUILD: remove relative paths to grimoire libraries
	* CONFIGURE: remove relative paths to grimoire libraries
	* DEPENDS: remove relative paths to grimoire libraries
	* DETAILS: remove relative paths to grimoire libraries

2005-03-16 Gareth Clay <gareth@caffeinefuelled.co.uk>
	* DETAILS: version 3.4.0

2005-02-28 Gareth Clay <gareth@caffeinefuelled.co.uk>
	* DETAILS: version 3.4.0-rc1

2005-02-26 Gareth Clay <gareth@caffeinefuelled.co.uk>
	* DETAILS: removed idea of a "devel" version. Spell version
	  stands at 3.3.92
	* PRE_BUILD: removed, since patching not needed
	* post-3.3.2-kdelibs-{htmlframes2,kioslaves}.patch: removed

2005-02-22 Gareth Clay <gareth@caffeinefuelled.co.uk>
	* DETAILS: devel version 3.3.92

2005-02-21 Seth Woolley <seth@tautology.org>
	* DETAILS: UPDATED updated for SECURITY FIXES
	* PRE_BUILD: added to patch things below
	* post-3.3.2-kdelibs-{htmlframes2,kioslaves}.patch: added

2005-02-02 Gareth Clay <gareth@caffeinefuelled.co.uk>
	* DEPENDS: added dependency on hicolor-icon-theme
	* BUILD: prevented kdelibs from installing its hicolor-icon-theme
	  index.theme file (bug #7498)

2005-01-07 Eric Sandall <eric@sandall.us>
	* DEPENDS: Added optional dependency on doxygen
	* BUILD: Build API documentation if doxygen is installed

2005-01-04 Eric Sandall <eric@sandall.us>
	* CONFLICTS: Self-conflict or it'll link against itself, which breaks
	  recompiling for changed libraries (such as mysql updates; problem is
	  similar to that of qt-x11)

2004-12-08 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: upgraded to version 3.3.2

2004-10-14 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: upgraded to version 3.3.1

2004-09-23 Eric Sandall <eric@sandall.us>
	* BUILD, DETAILS, DEPENDS: Source ../KDE_DETAILS
	* DEPENDS: Made arts optional