@@ -1,2 +1,0 @@
-conflicts quanta
-
