@@ -9,7 +9,7 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
        BUILD_API=2
         WEB_SITE=http://www.kde.org
          ENTERED=20040820
-         UPDATED=20050422
+         UPDATED=20050521
       LICENSE[0]=GPL
            SHORT="Various tools, including quanta, for web development for KDE."
 cat << EOF
