@@ -1,3 +1,9 @@
+2005-05-21 Thomas Houssin <Thomas.Houssin@sourcemage.org>
+	* PRE_BUILD: the patches released by the previous KDE security updates
+	        were faulty and introduced regressions. The updated patches correct 
+	        the introduced problems.
+		see http://www.kde.org/info/security/advisory-20050504-1.txt
+
 2005-04-22 Thomas Houssin <Thomas.Houssin@sourcemage.org>
 	* PRE_BUILD: added security patch
 		see http://www.kde.org/info/security/advisory-20050421-1.txt
